fix correct wrapping of partlist items

--- a/src/app/pages/instruction-viewer/instruction-viewer.component.sass
+++ b/src/app/pages/instruction-viewer/instruction-viewer.component.sass
@@ -36,6 +36,7 @@
   display: flex
   border-top: black 2px solid
   touch-action: none
+  flex-wrap: wrap
 
 .partlist-element
   margin-left: 5px
